project/stage/tests/accept/comments.ul
// comment
void main(){
  // comment
}
// comment