project/stage/tests/reject/if_temp.ul
void main(){
  _doVar;
  if(true){
    _doVar;
  }
}
